--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -896,13 +896,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 17379 entries, 0 to 17378\n",
+      "Data columns (total 17 columns):\n",
+      " #   Column      Non-Null Count  Dtype  \n",
+      "---  ------      --------------  -----  \n",
+      " 0   instant     17379 non-null  int64  \n",
+      " 1   dteday      17379 non-null  object \n",
+      " 2   season      17379 non-null  int64  \n",
+      " 3   yr          17379 non-null  int64  \n",
+      " 4   mnth        17379 non-null  int64  \n",
+      " 5   hr          17379 non-null  int64  \n",
+      " 6   holiday     17379 non-null  int64  \n",
+      " 7   weekday     17379 non-null  int64  \n",
+      " 8   workingday  17379 non-null  int64  \n",
+      " 9   weathersit  17379 non-null  int64  \n",
+      " 10  temp        17379 non-null  float64\n",
+      " 11  atemp       17379 non-null  float64\n",
+      " 12  hum         17379 non-null  float64\n",
+      " 13  windspeed   17379 non-null  float64\n",
+      " 14  casual      17379 non-null  int64  \n",
+      " 15  registered  17379 non-null  int64  \n",
+      " 16  cnt         17379 non-null  int64  \n",
+      "dtypes: float64(4), int64(12), object(1)\n",
+      "memory usage: 2.3+ MB\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
     "#penyimpanan file\n",
     "#hour_df.to_csv('hour_df.csv', index=False)\n",
-    "day_df.to_csv('day_df.csv', index=False)\n",
+    "#day_df.to_csv('day_df.csv', index=False)\n",
     "\n"
    ]
   }
